--- a/php/support/support.htm
+++ b/php/support/support.htm
@@ -5,6 +5,8 @@
 
 
 						Support <br><br>
+						
+						<a href="mailto:support@builtinmenlo.com">support@builtinmenlo.com</a><br>
 
 						Built In Menlo, Inc. provides this Privacy Policy to inform you of our policies and procedures regarding the collection, use, and disclosure of the information that we collect and receive from users of our mobile application (the “Application”) and services (collectively the “Services”). This Privacy Policy applies to the information that you provide to us through the Services. This Privacy Policy may be updated from time to time. We will notify you of any material changes by posting the new Privacy Policy. You are advised to consult this policy regularly for any changes.<br><br>
 
